# paygate

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  limen.config.yml  package.json  paygate.config.yml  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.changeset/: README.md  config.json
.github/: .release-please-manifest.json  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-please-config.json  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.md
.github/workflows/: ci.yml  codeql.yml  dashboard-preview.yml  docs-preview.yml  labeler.yml  publish-docker.yml  publish-npm.yml  publish-pypi.yml  release-please.yml  sbom.yml  security-scan.yml  stale.yml
apps/api/: .env.example  CHANGELOG.md  Dockerfile  README.md  drizzle.config.ts  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.setup.ts
apps/dashboard/: CHANGELOG.md  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
contracts/base/: README.md  foundry.toml
contracts/solana/: README.md
docs/: AI_Agent_Economy_Playbook.md  README.md  api-reference.md  architecture.md  base.md  compliance.md  deployment.md  error-handling.md  faq.md  getting-started.md  llms-full.txt  llms.txt  monitoring.md  payment-flow.md  roadmap.md  scaling.md  security.md  solana.md  testnet-demo.md  troubleshooting.md  webhooks.md
docs/assets/: README.md
docs/audits/: README.md
docs/brand/: STORY.md
docs/guides/: README.md  dual-chain.md  earn-usdc.md  list-in-directory.md  soc2-export.md
docs/migrations/: README.md
docs/reference/: openapi.yaml
docs/rfcs/: README.md  RFC-0001-facilitator-failover.md
docs/runbooks/: README.md  high-5xx.md  (+3 more)
examples/: README.md
examples/fastapi-api/: .env.example  Dockerfile  README.md  docker-compose.yml  limen.config.yml  main.py  pay.sh  paygate.config.yml  pyproject.toml
scripts/release/placeholders/pypi/: README.md  pyproject.toml
scripts/release/placeholders/pypi/paygate/: __init__.py
(+160 files in other folders)
