[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paygate-example-fastapi"
version = "0.1.0"
requires-python = ">=3.11"
license = "MIT"
description = "PayGate example: FastAPI app with x402 paywall on Base Sepolia."
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "paygate[fastapi]>=0.1.0",
    "redis>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
