[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "limen"
version = "0.0.1"
description = "x402 paywall for AI agent traffic. Placeholder release; the real SDK ships at 0.1+."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Limen contributors"}]
requires-python = ">=3.11"
keywords = ["x402", "paywall", "usdc", "base", "solana", "ai-agents", "placeholder"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dhruvalgupta2003/limen"
Source = "https://github.com/dhruvalgupta2003/limen"
Issues = "https://github.com/dhruvalgupta2003/limen/issues"

[tool.hatch.build.targets.wheel]
packages = ["limen"]
